Bug 18988 - Synaptics compilation issue: 'opts' undeclared
Summary: Synaptics compilation issue: 'opts' undeclared
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: unspecified
Hardware: x86 (IA32) All
: low normal
Assignee: Peter Hutterer
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2008-12-09 14:39 UTC by Manuel Schilt
Modified: 2008-12-11 17:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
just add pointer opts (511 bytes, patch)
2008-12-09 14:39 UTC, Manuel Schilt
no flags Details | Splinter Review
0001-Fix-compilation-issue-opts-undeclared-for-XINPUT-A.patch (1.43 KB, patch)
2008-12-09 15:31 UTC, Peter Hutterer
no flags Details | Splinter Review

Description Manuel Schilt 2008-12-09 14:39:50 UTC
Created attachment 20961 [details] [review]
just add pointer opts

I always got this compilation error:

synaptics.c: In function 'SynapticsPreInit':
synaptics.c:594: error: 'opts' undeclared (first use in this function)
synaptics.c:594: error: (Each undeclared identifier is reported only once
synaptics.c:594: error: for each function it appears in.)


pointer opts was not initialized in function 'SynapticsPreInit'.
Comment 1 Peter Hutterer 2008-12-09 15:31:32 UTC
Created attachment 20964 [details] [review]
0001-Fix-compilation-issue-opts-undeclared-for-XINPUT-A.patch
Comment 2 Peter Hutterer 2008-12-11 17:36:42 UTC
Pushed as 8d5cf39e7f37ce78aaec423a9da397d72b1629d2. Thanks for the report.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.