Fix compilation issue (opts undeclared) for XINPUT ABI 0. (#18988)

HistorySize is now deprecated for ABI > 0, so list it as a removed option in
the man page.

X.Org Bug 18988 <http://bugs.freedesktop.org/show_bug.cgi?id=18988>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Signed-off-by: Christoph Brill <egore911@egore911.de>
Signed-off-by: Henrik Rydberg <rydberg@euromail.se>